src/svc/api/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api.service
spec:
  selector:
    app: backend-api
  ports:
    - protocols: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
